--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/resultado_tv"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:text="" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <GridLayout
+        android:layout_width="407dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:onClick="onClick"
+        android:orientation="horizontal">
+
+
+        <Button
+            android:id="@+id/zero_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/_0" />
+
+        <Button
+            android:id="@+id/um_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/_1" />
+
+        <Button
+            android:id="@+id/dois_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/_2" />
+
+        <Button
+            android:id="@+id/tres_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/_3" />
+
+    </GridLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/quatro_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/_4" />
+
+        <Button
+            android:id="@+id/cinco_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/_5" />
+
+        <Button
+            android:id="@+id/seis_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/_6" />
+
+        <Button
+            android:id="@+id/sete_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/_7" />
+    </GridLayout>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/oito_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/_8" />
+
+        <Button
+            android:id="@+id/nove_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/_9" />
+        <Button
+            android:id="@+id/limpar_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/c" />
+
+        <!--<Button
+            android:id="@+id/mais_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/mais" />
+
+        <Button
+            android:id="@+id/menos_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/menos" />
+    </GridLayout>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+    <Button
+        android:id="@+id/multi_bt"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="@string/multi" />
+
+    <Button
+        android:id="@+id/dividi_bt"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="@string/dividi" />
+
+        <Button
+            android:id="@+id/igual_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/igual" />
+
+        <Button
+            android:id="@+id/limpar_bt"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/c" />-->
+
+
+
+    </GridLayout>
+
+</LinearLayout>
