--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,148 +10,275 @@
     <TextView
         android:id="@+id/resultado_tv"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:text="" />
-
-    <GridLayout
-        android:layout_width="407dp"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:onClick="onClick"
-        android:orientation="horizontal">
-
-
-        <Button
-            android:id="@+id/zero_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/_0" />
-
-        <Button
-            android:id="@+id/um_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/_1" />
-
-        <Button
-            android:id="@+id/dois_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/_2" />
-
-        <Button
-            android:id="@+id/tres_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/_3" />
-
-    </GridLayout>
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/quatro_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/_4" />
-
-        <Button
-            android:id="@+id/cinco_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/_5" />
-
-        <Button
-            android:id="@+id/seis_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/_6" />
-
-        <Button
-            android:id="@+id/sete_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/_7" />
-    </GridLayout>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/text_bg"
+        android:padding="8dp"
+        android:text="0"
+        android:textAlignment="viewEnd"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp">
 
-        <Button
-            android:id="@+id/oito_bt"
-            android:layout_width="100dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/_8" />
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/nove_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/_9" />
+            <Button
+                android:id="@+id/limpar_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/c" />
 
-        <Button
-            android:id="@+id/mais_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/mais" />
+            <Button
+                android:id="@+id/backspace_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/back" />
 
-        <Button
-            android:id="@+id/menos_bt"
-            android:layout_width="100dp"
+            <Button
+                android:id="@+id/divide_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/divide" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/menos" />
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/nove_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/_9" />
+
+            <Button
+                android:id="@+id/oito_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/_8" />
+
+
+            <Button
+                android:id="@+id/sete_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/_7" />
+
+            <Button
+                android:id="@+id/multi_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/multi" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/seis_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/_6" />
+
+            <Button
+                android:id="@+id/cinco_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/_5" />
+
+            <Button
+                android:id="@+id/quatro_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/_4" />
+
+            <Button
+                android:id="@+id/mais_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/mais" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/tres_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/_3" />
+
+            <Button
+                android:id="@+id/dois_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/_2" />
+
+            <Button
+                android:id="@+id/um_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/_1" />
+            
+            <Button
+                android:id="@+id/menos_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/menos" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+
+            <Button
+                android:id="@+id/modulo_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/modulo" />
+
+            <Button
+                android:id="@+id/zero_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/_0" />
+
+
+            <Button
+                android:id="@+id/ponto_bt"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:background="@drawable/round_bt"
+                android:onClick="onClick"
+                android:text="@string/ponto" />
+
+                <Button
+                    android:id="@+id/igual_bt"
+                    android:layout_width="50dp"
+                    android:layout_height="80dp"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:background="@drawable/round_bt"
+                    android:onClick="onClick"
+                    android:text="@string/igual" />
+
+
+
+        </LinearLayout>
     </GridLayout>
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-    <Button
-        android:id="@+id/multi_bt"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="@string/multi" />
-
-    <Button
-        android:id="@+id/dividi_bt"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="@string/dividi" />
-
-        <Button
-            android:id="@+id/igual_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/igual" />
-
-        <Button
-            android:id="@+id/limpar_bt"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/c" />
-
-
-
-    </GridLayout>
-
 </LinearLayout>
+
