Correção do visibility quando está em paisagem

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -331,6 +331,7 @@
             android:background="@drawable/round_bt"
             android:onClick="onClick"
             android:text="@string/raiz"
+            android:visibility="gone"
             tools:ignore="ButtonStyle" />
         <Button
             android:id="@+id/potencia_bt"
@@ -342,6 +343,7 @@
             android:background="@drawable/round_bt"
             android:onClick="onClick"
             android:text="@string/exponencial"
+            android:visibility="gone"
             tools:ignore="ButtonStyle" />
         </LinearLayout>
     </GridLayout>
